added Day 2 system info paths

--- a/notebooks/day2_data_cleaning_preparation.ipynb
+++ b/notebooks/day2_data_cleaning_preparation.ipynb
@@ -67,10 +67,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5432cd86",
+   "metadata": {},
+   "source": [
+    "## Weather Dataset: `latvia_meteo_1925_messy.zip`\n",
+    "\n",
+    "Let us imagine we are helping Toms Bricis with weather data analysis for the year 1925. We have come across a bundle of messy text files that require cleaning and preparation.\n",
+    "\n",
+    "- **What it is:** a bundle of **five “messy” text files** (≈50 rows each) simulating daily measurements from Latvian stations in **1925**:\n",
+    "  - **Rīga-University** — *Period 1 (Jan–Mar)*\n",
+    "  - **Rīga-University** — *Period 2 (Sep–Nov)*\n",
+    "  - **Liepāja** — *Apr–Jun*\n",
+    "  - **Mērsrags** — *Feb–May*\n",
+    "  - **Alūksne** — *Oct–Dec*\n",
+    "\n",
+    "- **Columns present (but order varies by file):**  \n",
+    "  `date`, `t_max_c`, `t_min_c`, `precip_24h_mm`, `precip_type`, `present_weather_code`, `notes`\n",
+    "\n",
+    "- **Deliberate “messiness” to practice cleaning:**\n",
+    "  - **Different separators:** `;`, `,`, `|`, and **TAB** (documented in each file’s `# fields=` header).\n",
+    "  - **Mixed column order** across files (use the header to map columns).\n",
+    "  - **Date formats vary** (`YYYY-MM-DD`, `DD.MM.YYYY`, `YYYY/MM/DD`, `DD-MM-YYYY`, `MM-DD-YYYY`, `YYYY.MM.DD`) and sometimes **include a time** (e.g., `07:00`).\n",
+    "  - **Numeric quirks:** decimal **commas** (e.g., `0,6`), **units** in strings (e.g., `0.8 mm`), and the Latvian word **“nulle”** for zero.\n",
+    "  - **Missing values** sprinkled in as `\"\"`, `NA`, `—`, `-999`.\n",
+    "  - **Codes as strings** with possible leading zeros (e.g., `present_weather_code = \"05\"`).\n",
+    "  - **Free-text `notes`** in Latvian from the station master (may be blank/missing).\n",
+    "\n",
+    "- **Intended skills to practice (Day 2):**\n",
+    "  - Detect & use **separators/column order** from headers.\n",
+    "  - **Parse heterogeneous dates** (with optional times).\n",
+    "  - Normalize **numerics/units** (decimal commas, `mm`, worded zeros).\n",
+    "  - Unify **missing values** and enforce **types** (e.g., cast weather codes to integers).\n",
+    "  - Keep useful **categorical text** (`precip_type`, `notes`) intact.\n",
+    "\n",
+    "As part of our workflow we will want to verify whether the above descriptions of messiness hold true for our specific dataset files. This will help us tailor our cleaning approach effectively.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eec9faea",
    "metadata": {},
    "source": [
-    "## Part 1: Python Fundamentals for Data Cleaning"
+    "## Part 1: Python Fundamentals for Data Cleaning\n",
+    "\n",
+    "For our first part we will use basic Python programming skills to explore and understand the dataset structure before diving into the cleaning process.\n",
+    "\n",
+    "### 🔑 Key Idea - Loops Go Brrr\n",
+    "\n",
+    "One of key advantages of programming is that we can automate repetitive tasks using loops. This is especially useful when working with datasets, as it allows us to apply the same operations to multiple rows or files without having to write redundant code.\n",
+    "\n",
+    "Similarly loops let us figure out an approach that works for a single file and then easily adapt it to others.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85ecad9f",
+   "metadata": {},
+   "source": [
+    "### Getting ready for work\n",
+    "\n",
+    "Typically in a finished notebook (and also normal scripts / programs), we want to start with a clear setup phase. This includes:\n",
+    "\n",
+    "1. **Importing Libraries:** Load all necessary libraries at the beginning.\n",
+    "2. **Setting Up Paths:** Define file paths and other constants.\n",
+    "3. **Configuring Options:** Set any options or preferences (e.g., display settings).\n",
+    "\n",
+    "By organizing our code this way, we make it easier to understand and modify later on.\n"
    ]
   },
   {
@@ -78,22 +140,58 @@
    "execution_count": null,
    "id": "a4ca0466",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today : 2025-08-20T14:53:10\n",
+      "Python : 3.12.5 (tags/v3.12.5:ff3bc82, Aug  6 2024, 20:45:27) [MSC v.1940 64 bit (AMD64)]\n",
+      "pandas: 2.3.1\n",
+      "Runtime: Windows-10-10.0.19045-SP0\n",
+      "Total Current Drive Space: 273.69 GB\n",
+      "Free Current Drive Space: 39.50 GB\n",
+      "Current Working Directory: d:\\Github\\RTU_Data_Analysis_Visualization_CPD\\notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import sys, platform, os, io, shutil, zipfile, re\n",
     "from datetime import datetime\n",
-    "import pandas as pd\n",
+    "# first datetime\n",
+    "print(f\"Today : {datetime.now().isoformat(timespec='seconds')}\")\n",
+    "# now Python version\n",
+    "print(f\"Python : {sys.version}\")\n",
+    "\n",
+    "try:\n",
+    "    import pandas as pd\n",
+    "    print('pandas:', pd.__version__)\n",
+    "except ImportError:\n",
+    "    print(f\"pandas not installed. Install with `pip install pandas`.\")\n",
+    "    # for excel support extra instructions\n",
+    "    print(f\"Install `openpyxl` for Excel support with `pip install openpyxl`.\")\n",
     "try:\n",
     "    import requests\n",
     "except ImportError:\n",
     "    requests = None\n",
-    "    print('requests not installed. Install with `%pip install requests`.')\n",
+    "    print('requests not installed. Install with `pip install requests`.')\n",
     "\n",
-    "print('pandas:', pd.__version__)\n",
-    "print('Python :', sys.version.split()[0])\n",
+    "\n",
+    "# we can also print out what type of environment we are running in, this could show OS information\n",
     "print('Runtime:', platform.platform())\n",
-    "print('Now    :', datetime.now().isoformat(timespec='seconds'))"
+    "# We could show system RAM and free RAM but that would require either a non standard library \n",
+    "# or we would have to write some extra functions we skip this for now\n",
+    "# you can ask LLM to write these functions for you\n",
+    "# alternatively there are external libraries like psutil that do this out of the box\n",
+    "\n",
+    "# Let us show our current drive space\n",
+    "print(f\"Total Current Drive Space: {shutil.disk_usage('/').total / (1024**3):.2f} GB\")\n",
+    "print(f\"Free Current Drive Space: {shutil.disk_usage('/').free / (1024**3):.2f} GB\")\n",
+    "\n",
+    "# Current Working Directory\n",
+    "print(f\"Current Working Directory: {Path.cwd()}\")\n",
+    "# note that in some cases you might not want to provide all this information to the public, if you have a super secret computer...\n"
    ]
   },
   {
@@ -646,13 +744,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.x"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
