added beginner friendly comments to Python functions

--- a/notebooks/day2_data_cleaning_preparation.ipynb
+++ b/notebooks/day2_data_cleaning_preparation.ipynb
@@ -210,8 +210,16 @@
    "outputs": [],
    "source": [
     "def greet(name: str = 'student') -> str:\n",
+    "    \"\"\"\n",
+    "    Returns a friendly greeting for the given name.\n",
+    "    If no name is provided, defaults to 'student'.\n",
+    "    \"\"\"\n",
+    "    # Use an f-string to insert the name into the greeting\n",
     "    return f\"Hello, {name}!\"\n",
-    "print(greet())"
+    "\n",
+    "# Call the function and print the result\n",
+    "greeting = greet()\n",
+    "print(greeting)"
    ]
   },
   {
@@ -222,20 +230,26 @@
    "outputs": [],
    "source": [
     "def download_and_unzip(url: str, target_folder: str | Path = 'sample_data') -> Path:\n",
-    "    target = Path(target_folder)\n",
-    "    target.mkdir(parents=True, exist_ok=True)\n",
-    "    filename = url.split('/')[-1]\n",
-    "    zip_path = target / filename\n",
+    "    \"\"\"\n",
+    "    Downloads a ZIP file from the given URL and extracts it to the target folder.\n",
+    "    Returns the path to the folder where files were extracted.\n",
+    "    \"\"\"\n",
+    "    target = Path(target_folder)  # Make sure target is a Path object\n",
+    "    target.mkdir(parents=True, exist_ok=True)  # Create the folder if it doesn't exist\n",
+    "    filename = url.split('/')[-1]  # Get the file name from the URL\n",
+    "    zip_path = target / filename  # Full path to save the ZIP file\n",
     "    if requests is None:\n",
     "        raise RuntimeError('requests required.')\n",
+    "    # Download the file in chunks (good for large files)\n",
     "    with requests.get(url, stream=True, timeout=60) as r:\n",
-    "        r.raise_for_status()\n",
+    "        r.raise_for_status()  # Raise an error if download failed\n",
     "        with open(zip_path, 'wb') as f:\n",
     "            for chunk in r.iter_content(chunk_size=8192):\n",
     "                f.write(chunk)\n",
+    "    # Unzip the downloaded file\n",
     "    with zipfile.ZipFile(zip_path, 'r') as zf:\n",
     "        zf.extractall(target)\n",
-    "    return target\n"
+    "    return target  # Return the folder where files were extracted\n"
    ]
   },
   {
@@ -264,9 +278,14 @@
    "outputs": [],
    "source": [
     "def iter_lines(path: Path):\n",
+    "    \"\"\"\n",
+    "    Yields each line from a text file, removing the newline character at the end.\n",
+    "    Useful for reading files line by line.\n",
+    "    \"\"\"\n",
+    "    # Open the file for reading (UTF-8 encoding, replace errors)\n",
     "    with path.open('r', encoding='utf-8', errors='replace') as f:\n",
     "        for line in f:\n",
-    "            yield line.rstrip('\\n')"
+    "            yield line.rstrip('\\n')  # Remove the newline at the end of each line"
    ]
   },
   {
@@ -285,10 +304,14 @@
    "outputs": [],
    "source": [
     "def count_lines(path: Path) -> tuple[int, int]:\n",
-    "    total, nonempty = 0, 0\n",
-    "    for line in iter_lines(path):\n",
+    "    \"\"\"\n",
+    "    Counts the total number of lines and the number of non-empty lines in a file.\n",
+    "    Returns a tuple: (total_lines, nonempty_lines)\n",
+    "    \"\"\"\n",
+    "    total, nonempty = 0, 0  # Initialize counters\n",
+    "    for line in iter_lines(path):  # Go through each line in the file\n",
     "        total += 1\n",
-    "        if line.strip():\n",
+    "        if line.strip():  # Check if the line is not just whitespace\n",
     "            nonempty += 1\n",
     "    return total, nonempty"
    ]
@@ -309,10 +332,14 @@
    "outputs": [],
    "source": [
     "def is_good_line(line: str) -> bool:\n",
-    "    s = line.strip()\n",
-    "    if not s: return False\n",
-    "    if s.startswith('#'): return False\n",
-    "    if len(s) < 5: return False\n",
+    "    \"\"\"\n",
+    "    Checks if a line of text is 'good' (not empty, not a comment, and long enough).\n",
+    "    Returns True if the line is good, False otherwise.\n",
+    "    \"\"\"\n",
+    "    s = line.strip()  # Remove whitespace from both ends\n",
+    "    if not s: return False  # Skip empty lines\n",
+    "    if s.startswith('#'): return False  # Skip comment lines\n",
+    "    if len(s) < 5: return False  # Skip very short lines\n",
     "    return True"
    ]
   },
@@ -332,19 +359,24 @@
    "outputs": [],
    "source": [
     "def clean_file(path: Path) -> tuple[int, int]:\n",
-    "    out_good = path.with_suffix('.good.txt')\n",
-    "    out_bad = path.with_suffix('.bad.txt')\n",
-    "    good, bad = 0, 0\n",
+    "    \"\"\"\n",
+    "    Reads a file and writes 'good' lines to one file and 'bad' lines to another.\n",
+    "    Returns a tuple: (number_of_good_lines, number_of_bad_lines)\n",
+    "    \"\"\"\n",
+    "    out_good = path.with_suffix('.good.txt')  # Output file for good lines\n",
+    "    out_bad = path.with_suffix('.bad.txt')    # Output file for bad lines\n",
+    "    good, bad = 0, 0  # Counters for good and bad lines\n",
+    "    # Open the input and output files\n",
     "    with path.open('r', encoding='utf-8', errors='replace') as fin, \\\n",
     "         out_good.open('w') as fg, out_bad.open('w') as fb:\n",
     "        for line in fin:\n",
     "            if is_good_line(line):\n",
-    "                fg.write(line)\n",
+    "                fg.write(line)  # Write good line\n",
     "                good += 1\n",
     "            else:\n",
-    "                fb.write(line)\n",
+    "                fb.write(line)  # Write bad line\n",
     "                bad += 1\n",
-    "    return good, bad"
+    "    return good, bad  # Return the counts"
    ]
   },
   {
@@ -363,9 +395,13 @@
    "outputs": [],
    "source": [
     "def clean_files(folder: Path):\n",
-    "    results = {}\n",
+    "    \"\"\"\n",
+    "    Cleans all .txt files in the given folder using clean_file().\n",
+    "    Returns a dictionary with file paths as keys and (good, bad) counts as values.\n",
+    "    \"\"\"\n",
+    "    results = {}  # Dictionary to store results for each file\n",
     "    for file in folder.glob('*.txt'):\n",
-    "        results[file] = clean_file(file)\n",
+    "        results[file] = clean_file(file)  # Clean each file and store the result\n",
     "    return results"
    ]
   },
