--- a/notebooks/day2_data_cleaning_preparation.ipynb
+++ b/notebooks/day2_data_cleaning_preparation.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a4ca0466",
    "metadata": {},
    "outputs": [
@@ -145,9 +145,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Today : 2025-08-20T14:53:10\n",
+      "Today : 2025-08-20T17:48:59\n",
       "Python : 3.12.5 (tags/v3.12.5:ff3bc82, Aug  6 2024, 20:45:27) [MSC v.1940 64 bit (AMD64)]\n",
       "pandas: 2.3.1\n",
+      "pandas: 2.3.1\n",
+      "Runtime: Windows-10-10.0.19045-SP0\n",
+      "Total Current Drive Space: 273.69 GB\n",
+      "Free Current Drive Space: 39.50 GB\n",
+      "Current Working Directory: d:\\Github\\RTU_Data_Analysis_Visualization_CPD\\notebooks\n",
       "Runtime: Windows-10-10.0.19045-SP0\n",
       "Total Current Drive Space: 273.69 GB\n",
       "Free Current Drive Space: 39.50 GB\n",
@@ -204,10 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d94c3040",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, student!\n"
+     ]
+    }
+   ],
    "source": [
     "def greet(name: str = 'student') -> str:\n",
     "    \"\"\"\n",
@@ -224,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f4b2f894",
    "metadata": {},
    "outputs": [],
@@ -249,6 +262,8 @@
     "    # Unzip the downloaded file\n",
     "    with zipfile.ZipFile(zip_path, 'r') as zf:\n",
     "        zf.extractall(target)\n",
+    "    # Optionally, remove the ZIP file after extraction\n",
+    "    # zip_path.unlink(missing_ok=True)  # Remove the ZIP file\n",
     "    return target  # Return the folder where files were extracted\n"
    ]
   },
@@ -260,6 +275,30 @@
     "**Practice dataset for Part 1:** `latvia_meteo_1925_messy.zip` (5 text files)\n",
     "\n",
     "- URL: https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/raw/refs/heads/main/data/latvia_meteo_1925_messy.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7c941a28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('day_2_data')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's download the messy files zip\n",
+    "url = \"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/raw/refs/heads/main/data/latvia_meteo_1925_messy.zip\"\n",
+    "# let's download the file and extract it under day_2_data\n",
+    "download_and_unzip(url, Path(\"day_2_data\"))"
    ]
   },
   {
@@ -285,7 +324,8 @@
     "    # Open the file for reading (UTF-8 encoding, replace errors)\n",
     "    with path.open('r', encoding='utf-8', errors='replace') as f:\n",
     "        for line in f:\n",
-    "            yield line.rstrip('\\n')  # Remove the newline at the end of each line"
+    "            yield line.rstrip('\\n')  # Remove the newline at the end of each line\n",
+    "            # why yield? # because it allows processing each line one at a time, which is more memory efficient"
    ]
   },
   {
@@ -407,6 +447,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0cb1b335",
+   "metadata": {},
+   "source": [
+    "## Determining the separator character\n",
+    "\n",
+    "Our files have helpfully provided a separator hint without which it would be very hard to determine.\n",
+    "\n",
+    "`# separator_hint=|`\n",
+    "`# separator_hint=TAB`\n",
+    "`# separator_hint=,`\n",
+    "\n",
+    "Let's write a function that extracts hint from the file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5f354afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_sep(path: Path) -> str:\n",
+    "    \"\"\"\n",
+    "    We look for first line that contains\n",
+    "    `# separator_hint=|`\n",
+    "`# separator_hint=TAB`\n",
+    "`# separator_hint=,`\n",
+    "    \"\"\"\n",
+    "    needle = \"separator_hint\"\n",
+    "    sep = None\n",
+    "    # lets open file and go through line by line\n",
+    "    with open(path, 'r', encoding='utf-8', errors='replace') as f:\n",
+    "        for line in f:\n",
+    "            if needle in line:\n",
+    "                # let's find whatever is after needle\n",
+    "                sep = line.split('=')[1].strip()\n",
+    "    # if sep is TAB we need to return \\t\n",
+    "    if sep == \"TAB\":\n",
+    "        return \"\\t\"\n",
+    "    return sep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "177a338f",
    "metadata": {},
    "source": [
@@ -420,7 +504,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_cleaned_file(path: Path) -> pd.DataFrame:\n",
+    "# we might want to supply our own separator\n",
+    "\n",
+    "def load_cleaned_file(path: Path, sep: str = \",\") -> pd.DataFrame:\n",
     "    with path.open('r') as f:\n",
     "        lines = [l.strip().split() for l in f if l.strip()]\n",
     "    maxlen = max(len(r) for r in lines) if lines else 0\n",
