--- a/notebooks/day2_data_cleaning_preparation.ipynb
+++ b/notebooks/day2_data_cleaning_preparation.ipynb
@@ -297,11 +297,11 @@
         "print(numeric_greeting)"
       ],
       "metadata": {
-        "id": "DGWKzOyzG-BT",
-        "outputId": "d143ab90-7114-4b2c-e357-c1cd2d2ac989",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DGWKzOyzG-BT",
+        "outputId": "d143ab90-7114-4b2c-e357-c1cd2d2ac989"
       },
       "id": "DGWKzOyzG-BT",
       "execution_count": 5,
@@ -423,12 +423,12 @@
         "    files.download(p)"
       ],
       "metadata": {
-        "id": "zVxkQR7yK88c",
-        "outputId": "adb268e9-bae0-44a2-def1-aa51bafce90c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "id": "zVxkQR7yK88c",
+        "outputId": "adb268e9-bae0-44a2-def1-aa51bafce90c"
       },
       "id": "zVxkQR7yK88c",
       "execution_count": 8,
@@ -762,25 +762,131 @@
         "id": "b153f8c3"
       },
       "source": [
-        "### 📂 File Handling"
+        "[link text](https://)### 📂 File Handling\n",
+        "\n",
+        "First let me show you how to read whole text file into one big text string"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# let's make a function that takes a file Path or string and optional encoding with default utf-8 and returns text string\n",
+        "def get_file_contents(path: Path | str, encoding: str = 'utf-8') -> str:\n",
+        "    \"\"\"\n",
+        "    Reads the contents of a text file and returns it as a string.\n",
+        "    \"\"\"\n",
+        "    # so path could be string or Path\n",
+        "    # file could have any extension but it should contain text of some sort\n",
+        "    with open(path, 'r', encoding=encoding) as f:\n",
+        "        return f.read()"
+      ],
+      "metadata": {
+        "id": "B2M3mbQ_PZCq"
+      },
+      "id": "B2M3mbQ_PZCq",
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's read aluksne into memory\n",
+        "# aluksne = get_file_contents(Path(\"day_2_data/aluksne_1925.txt\"))\n",
+        "aluksne = get_file_contents(\"day_2_data/aluksne_1925.txt\")\n",
+        "print(aluksne)"
+      ],
+      "metadata": {
+        "id": "qwAhyXkoP19P",
+        "outputId": "f977acb3-d252-4053-fd66-0d47a656b45d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "qwAhyXkoP19P",
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "# station_name=Alūksne\n",
+            "# period=(Oct–Dec)\n",
+            "# separator_hint=|\n",
+            "# columns_in_this_file= notes | present_weather_code | t_max_c | precip_24h_mm | date | precip_type | t_min_c\n",
+            "# note: some values intentionally messy (units, words, missing, time in date)\n",
+            "# fields=notes|present_weather_code|t_max_c|precip_24h_mm|date|precip_type|t_min_c\n",
+            "—|53|5.9|3.0 mm|10-19-1925|R|5.5\n",
+            "Rīts auksts|-999|9.1|2.3 mm|18.10.1925|mixed|4.2\n",
+            "Daļēji mākoņains|65|5.4|0.0|11-10-1925||-0.5\n",
+            "Daļēji mākoņains|50|15.6|0.5|10-07-1925 14:00|S|10.4\n",
+            "Neliels vējš|63|-1.1|0.0|12-28-1925|—|—\n",
+            "Vēlāk sāka līt|-999|5.3||12-07-1925 19:00|none|\n",
+            "Pūtis brāzmas|82|4.2|0.6 mm|11-07-1925|S|0.1\n",
+            "—|61|-7.2|1.4|12-03-1925|mixed|-6.5\n",
+            "Laikam migla|51|3.3|1.0 mm|11-27-1925|mixed|-1.3\n",
+            "Mērīšanas kļūda?|70|-3.5999999999999996|2.1|12-06-1925|M|-2.9\n",
+            "Skursteņi kūp|71|6.2|0.0|10-21-1925||6.9\n",
+            "NA|61|1.3|2.1|28.11.1925|NA|2.0\n",
+            "Ap pusdienlaiku saule|80|8.4|1.9 mm|02-11-1925|snow|-1.5\n",
+            "|53|8.4||10-01-1925 07:00||3.3\n",
+            "Mērījums apstiprināts|53|10.8|0.7 mm|10-08-1925|S|5.3\n",
+            "Rīts auksts|45|8.1|0.1|1925-11-25|NA|-999\n",
+            "Laikam migla|53|8.9|2.5|10-17-1925 07:00|R|7.1\n",
+            "NA||5.4|0.8|11-22-1925 19:00|snow|2.7\n",
+            "|82|1.1|0.9|12-25-1925 08:00|S|-4.5\n",
+            "—|65||0.0 mm|10-23-1925|none|-0.4\n",
+            "Daļēji mākoņains|60|9.1|1.7|10-02-1925|S|1.6\n",
+            "Pūtis brāzmas|80|10.3|nulle|10-16-1925 14:00|—|7.9\n",
+            "Pūtis brāzmas|61|6.0|0.2 mm|11-24-1925 14:00|snow|-1.9\n",
+            "Mērījums apstiprināts|45|2.9|1.1 mm|12-14-1925 19:00||-6.6\n",
+            "Laikam migla|82|9.0|0.0|10-10-1925||3.9\n",
+            "|63|3.9|1.7 mm|12-02-1925|S|-2.3\n",
+            "Ap pusdienlaiku saule|81|2.3|0.0 mm|11-03-1925 20:00|NA|1.4\n",
+            "—|53|-3.0|0.6|12-13-1925|mixed|-4.0\n",
+            "Rīts auksts|73|12.3|1.9|10-20-1925|mixed|-999\n",
+            "Daļēji mākoņains|51||3.5 mm|11-06-1925 08:00|M|-4.6\n",
+            "Vēlāk sāka līt|60|NA|1.1 mm|11-20-1925|M|1.8\n",
+            "Mērījums apstiprināts|51|-2.2|0.2 mm|12-18-1925|snow|-7.6\n",
+            "Pūtis brāzmas|82|5.3||11-18-1925||-0.4\n",
+            "NA|63|3.4||12-19-1925|M|-6.0\n",
+            "Novērojums vēlāk|90|-0.2|2.3|12-22-1925|mixed|-8.2\n",
+            "Daļēji mākoņains|90|-3.5|0.2 mm|12-16-1925|rain|-4.0\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Iterating over file line at a time\n",
+        "\n",
+        "Above example showed how we could read a whole file into memory.\n",
+        "However that means we would be working with file as one big string as a whole. We could do some replace operations.\n",
+        "\n",
+        "Much more often we will want to work on file one line(row) at a time."
+      ],
+      "metadata": {
+        "id": "Xu2zQhslRDSd"
+      },
+      "id": "Xu2zQhslRDSd"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
       "id": "85ef7c4c",
       "metadata": {
         "id": "85ef7c4c"
       },
       "outputs": [],
       "source": [
-        "def iter_lines(path: Path):\n",
+        "def iter_lines(path: Path | str):\n",
         "    \"\"\"\n",
         "    Yields each line from a text file, removing the newline character at the end.\n",
         "    Useful for reading files line by line.\n",
         "    \"\"\"\n",
         "    # Open the file for reading (UTF-8 encoding, replace errors)\n",
-        "    with path.open('r', encoding='utf-8', errors='replace') as f:\n",
+        "    with open(path, 'r', encoding='utf-8', errors='replace') as f:\n",
         "        for line in f:\n",
         "            yield line.rstrip('\\n')  # Remove the newline at the end of each line\n",
         "            # why yield? # because it allows processing each line one at a time, which is more memory efficient"
@@ -798,7 +904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "ae3f7301",
       "metadata": {
         "id": "ae3f7301"
@@ -816,6 +922,34 @@
         "        if line.strip():  # Check if the line is not just whitespace\n",
         "            nonempty += 1\n",
         "    return total, nonempty"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's count lines in aluksne_1925\n",
+        "count_lines(Path(\"day_2_data/aluksne_1925.txt\"))"
+      ],
+      "metadata": {
+        "id": "lOyraEVYRpDS",
+        "outputId": "97cf47a0-0aec-45ea-ad06-88aea12b292d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "lOyraEVYRpDS",
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(42, 42)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
       ]
     },
     {
