Added examples of Good and Bad File handling as pairs

--- a/notebooks/day2_data_cleaning_preparation.ipynb
+++ b/notebooks/day2_data_cleaning_preparation.ipynb
@@ -1039,11 +1039,11 @@
         "clean_file(Path(\"day_2_data/aluksne_1925.txt\"))"
       ],
       "metadata": {
-        "id": "egIQU_QsWTqR",
-        "outputId": "bae42bb8-d5c9-4525-9184-1b9c23e71dae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "egIQU_QsWTqR",
+        "outputId": "bae42bb8-d5c9-4525-9184-1b9c23e71dae"
       },
       "id": "egIQU_QsWTqR",
       "execution_count": 21,
@@ -1111,11 +1111,11 @@
         "results"
       ],
       "metadata": {
-        "id": "fde5iOXCYqeo",
-        "outputId": "218f2e86-a0f1-4e51-f5ff-545c1a1e89ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fde5iOXCYqeo",
+        "outputId": "218f2e86-a0f1-4e51-f5ff-545c1a1e89ed"
       },
       "id": "fde5iOXCYqeo",
       "execution_count": 25,
@@ -1193,12 +1193,12 @@
         "get_sep(Path(\"day_2_data/aluksne_1925.txt\"))"
       ],
       "metadata": {
-        "id": "dMQsAaEyaCtd",
-        "outputId": "2ffc63f6-d731-462e-96be-78891432c692",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "dMQsAaEyaCtd",
+        "outputId": "2ffc63f6-d731-462e-96be-78891432c692"
       },
       "id": "dMQsAaEyaCtd",
       "execution_count": 27,
@@ -1228,11 +1228,11 @@
         "    print(p, get_sep(p))"
       ],
       "metadata": {
-        "id": "XvUvlg5zaRzg",
-        "outputId": "bc0d2e4f-3e1e-495e-8414-d3ff8f7fb24e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XvUvlg5zaRzg",
+        "outputId": "bc0d2e4f-3e1e-495e-8414-d3ff8f7fb24e"
       },
       "id": "XvUvlg5zaRzg",
       "execution_count": 28,
@@ -1287,12 +1287,12 @@
         "liepaja_df"
       ],
       "metadata": {
-        "id": "9XAbM9QLbOOt",
-        "outputId": "d9926f97-b934-414e-b262-6270867d2189",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "9XAbM9QLbOOt",
+        "outputId": "d9926f97-b934-414e-b262-6270867d2189"
       },
       "id": "9XAbM9QLbOOt",
       "execution_count": 33,
@@ -2204,11 +2204,11 @@
         "good_files\n"
       ],
       "metadata": {
-        "id": "J50o98aIcd2v",
-        "outputId": "51033c04-f6b1-41bf-ff74-4ea4efd11afc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J50o98aIcd2v",
+        "outputId": "51033c04-f6b1-41bf-ff74-4ea4efd11afc"
       },
       "id": "J50o98aIcd2v",
       "execution_count": 34,
@@ -2237,11 +2237,11 @@
         "good_files\n"
       ],
       "metadata": {
-        "id": "_uJWT-cheS4D",
-        "outputId": "90cd47b4-6cf1-4a52-8ed2-1fddaf527a19",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_uJWT-cheS4D",
+        "outputId": "90cd47b4-6cf1-4a52-8ed2-1fddaf527a19"
       },
       "id": "_uJWT-cheS4D",
       "execution_count": 38,
@@ -2270,11 +2270,11 @@
         "bad_files"
       ],
       "metadata": {
-        "id": "oa-RAhfYdiUT",
-        "outputId": "70c146dc-4791-44e1-bfe4-becc7f19a439",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oa-RAhfYdiUT",
+        "outputId": "70c146dc-4791-44e1-bfe4-becc7f19a439"
       },
       "id": "oa-RAhfYdiUT",
       "execution_count": 39,
@@ -2303,11 +2303,11 @@
         "bad_files"
       ],
       "metadata": {
-        "id": "p1NIGWxPec0I",
-        "outputId": "308cf1f9-edd6-4156-b626-67b4c5589fc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p1NIGWxPec0I",
+        "outputId": "308cf1f9-edd6-4156-b626-67b4c5589fc0"
       },
       "id": "p1NIGWxPec0I",
       "execution_count": 40,
@@ -2336,11 +2336,11 @@
         "    print(p, p.exists())"
       ],
       "metadata": {
-        "id": "0o-vcQrNdrgA",
-        "outputId": "45e8e9cd-2061-44b7-da5e-4d0124ce2fba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0o-vcQrNdrgA",
+        "outputId": "45e8e9cd-2061-44b7-da5e-4d0124ce2fba"
       },
       "id": "0o-vcQrNdrgA",
       "execution_count": 41,
@@ -2366,11 +2366,11 @@
         "good_files"
       ],
       "metadata": {
-        "id": "nxzukuuLer3d",
-        "outputId": "c0c69365-a3ec-4675-8df6-016caaadd99b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nxzukuuLer3d",
+        "outputId": "c0c69365-a3ec-4675-8df6-016caaadd99b"
       },
       "id": "nxzukuuLer3d",
       "execution_count": 42,
@@ -2407,11 +2407,11 @@
         "print(f\"Dictionary size: {len(dataframe_dict)}\")"
       ],
       "metadata": {
-        "id": "uhxGNFVXe88q",
-        "outputId": "f571faa3-4222-41fa-d137-da87efeea17b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uhxGNFVXe88q",
+        "outputId": "f571faa3-4222-41fa-d137-da87efeea17b"
       },
       "id": "uhxGNFVXe88q",
       "execution_count": 43,
@@ -2437,11 +2437,11 @@
         "dataframe_dict.keys()"
       ],
       "metadata": {
-        "id": "SgMi4d26fo4g",
-        "outputId": "8d0a9eca-e90e-4b7b-9ff5-341007eb9e05",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SgMi4d26fo4g",
+        "outputId": "8d0a9eca-e90e-4b7b-9ff5-341007eb9e05"
       },
       "id": "SgMi4d26fo4g",
       "execution_count": 44,
@@ -2466,11 +2466,11 @@
         "    print(f\"Dataframe {key} has shape {value.shape}\")"
       ],
       "metadata": {
-        "id": "kePjG8ZMf3oD",
-        "outputId": "d562fa8f-b383-445a-81db-99d8d7035eaf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kePjG8ZMf3oD",
+        "outputId": "d562fa8f-b383-445a-81db-99d8d7035eaf"
       },
       "id": "kePjG8ZMf3oD",
       "execution_count": 45,
@@ -2511,12 +2511,12 @@
         "    files.download(p)"
       ],
       "metadata": {
-        "id": "y4IZn3ufgCef",
-        "outputId": "dc56496a-4b0f-43ae-dbbe-5a0506e1008b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "id": "y4IZn3ufgCef",
+        "outputId": "dc56496a-4b0f-43ae-dbbe-5a0506e1008b"
       },
       "id": "y4IZn3ufgCef",
       "execution_count": 47,
@@ -2842,6 +2842,29 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let us make a function that takes a url of a zip file\n",
+        "# this function will download url and unzip\n",
+        "# then the text files in unzipped will be separated into correspondin good and bad files\n",
+        "# then function will iteratoe through each good and bad file pair\n",
+        "# the function will extract separator from bad file and dataframe from good file using that separator\n",
+        "# then the dataframe will be saved as xlsx\n",
+        "\n",
+        "# def get_xlsx_from_url(url: str, target_folder: str | Path = 'sample_data') -> Path:\n",
+        "#     \"\"\"\n",
+        "#     Downloads a ZIP file from the given URL and extracts it to the target folder.\n",
+        "#     Returns the path to the folder where files were extracted.\n",
+        "#     \"\"\"\n"
+      ],
+      "metadata": {
+        "id": "eexLjJ14hXeT"
+      },
+      "id": "eexLjJ14hXeT",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
