--- a/notebooks/day2_data_cleaning_preparation.ipynb
+++ b/notebooks/day2_data_cleaning_preparation.ipynb
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "a4ca0466",
       "metadata": {
         "colab": {
@@ -260,14 +260,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "d94c3040",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d94c3040",
-        "outputId": "7bee570a-fbf9-4f79-e39c-52c6eacdadb4"
+        "id": "d94c3040"
       },
       "outputs": [],
       "source": [
@@ -286,9 +282,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "ed0a8142",
-      "metadata": {},
+      "metadata": {
+        "id": "ed0a8142",
+        "outputId": "db0287fe-ad8a-4a11-a095-36fd90f8f4a9"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -306,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "DGWKzOyzG-BT",
       "metadata": {
         "colab": {
@@ -336,7 +335,9 @@
     {
       "cell_type": "markdown",
       "id": "ea45c37c",
-      "metadata": {},
+      "metadata": {
+        "id": "ea45c37c"
+      },
       "source": [
         "### Type Hints\n",
         "\n",
@@ -350,9 +351,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "ad7e7b4b",
-      "metadata": {},
+      "metadata": {
+        "id": "ad7e7b4b"
+      },
       "outputs": [],
       "source": [
         "# let's see one more example with simple add function\n",
@@ -369,7 +372,10 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "9d4c906f",
-      "metadata": {},
+      "metadata": {
+        "id": "9d4c906f",
+        "outputId": "e76c8be5-ad43-4d2b-f6fa-ae8b54c9b934"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -410,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "f4b2f894",
       "metadata": {
         "id": "f4b2f894"
@@ -459,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "7c941a28",
       "metadata": {
         "colab": {
@@ -632,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "B2M3mbQ_PZCq",
       "metadata": {
         "id": "B2M3mbQ_PZCq"
@@ -654,7 +660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "qwAhyXkoP19P",
       "metadata": {
         "colab": {
@@ -760,7 +766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "ae3f7301",
       "metadata": {
         "id": "ae3f7301"
@@ -783,7 +789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "lOyraEVYRpDS",
       "metadata": {
         "colab": {
@@ -829,7 +835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "5f354afe",
       "metadata": {
         "id": "5f354afe"
@@ -861,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "dMQsAaEyaCtd",
       "metadata": {
         "colab": {
@@ -890,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "XvUvlg5zaRzg",
       "metadata": {
         "colab": {
@@ -932,9 +938,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "8bf9cc54",
-      "metadata": {},
+      "metadata": {
+        "id": "8bf9cc54"
+      },
       "outputs": [],
       "source": [
         "# Let us write a function that will take a file path\n",
@@ -969,9 +977,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "160242eb",
-      "metadata": {},
+      "metadata": {
+        "id": "160242eb"
+      },
       "outputs": [],
       "source": [
         "# okay let's write a function that takes src folder containing text files\n",
@@ -993,7 +1003,9 @@
     {
       "cell_type": "markdown",
       "id": "bc921bad",
-      "metadata": {},
+      "metadata": {
+        "id": "bc921bad"
+      },
       "source": [
         "### Saving converted files into XLSX\n",
         "\n",
@@ -1004,9 +1016,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "42291ec0",
-      "metadata": {},
+      "metadata": {
+        "id": "42291ec0"
+      },
       "outputs": [],
       "source": [
         "# let'' take day_2_data text files\n",
@@ -1041,30 +1055,15 @@
         "**URL:** https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/raw/refs/heads/main/data/latvia_meteo_1925_extra_messy.zip\n",
         "\n",
         "### 🎯 Objective\n",
-        "Convert multiple extra-messy weather text files into **one cleaned file per source**, then load each into a **separate DataFrame** and SAVE them into XLSX files into a new folder of your choice\n",
+        "Convert multiple extra-messy weather text files   into XLSX files into a new folder of your choice\n",
         "\n",
-        "### ✅ Success Criteria\n",
-        "- Each original text file has a corresponding `.good.txt` output.\n",
-        "- Each `.good.txt` loads into a DataFrame without errors.\n",
-        "- Basic column consistency achieved (same number of columns and sensible types where possible).\n",
+        "### Hint\n",
         "\n",
-        "### 🔍 What to Watch For\n",
-        "- Junk header/footer lines (e.g., comments, separators)\n",
-        "- Inconsistent separators (`,`, `;`, tabs, or spaces)\n",
-        "- Missing fields and short/empty lines\n",
-        "- Non-UTF8 characters — use `errors='replace'` if needed\n",
+        "Simply run the provided functions with folders of your choice.\n",
         "\n",
-        "### 🧭 Suggested Workflow\n",
-        "1) **Download & unzip** to `data/` using `download_and_unzip`  \n",
-        "2) **List files** and do a quick **line count** with `count_lines`  \n",
-        "3) **Clean** with `clean_files(data_dir)`  \n",
-        "4) **Load** each cleaned file with `load_cleaned_file`  \n",
-        "5) **Sanity-check**: `.head()`, `.info()`, and simple value counts on key columns\n",
+        "### Advanced Users\n",
         "\n",
-        "### 🧩 Hints\n",
-        "- If a file still fails to parse, adjust `is_good_line` (e.g., skip lines that start with specific tokens).\n",
-        "- If different files use different separators, handle at **pandas** stage later (Part 3) by re-parsing columns.\n",
-        "- Keep outputs organized: write cleaned files into a `data/cleaned/` subfolder if you choose to extend `clean_files`."
+        "You can start working on extracting column names from the original files. We will do that after break."
       ]
     },
     {
@@ -1173,7 +1172,9 @@
     {
       "cell_type": "markdown",
       "id": "c1a2569c",
-      "metadata": {},
+      "metadata": {
+        "id": "c1a2569c"
+      },
       "source": [
         "## Part 2b: Extracting column names automatically\n",
         "\n",
@@ -1491,7 +1492,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "venv",
